# mai-scam-backend

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_CONFIG.md  AWS_DEPLOYMENT_GUIDE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DOCKER.md  Dockerfile  README.md  WARP.md  app.py  check-email.py  check-phone.py  main.py  phishtank_checker.py  pyproject.toml  requirements.txt  router.py  setting.py  test-ocr.py  test.py  test_email_analysis.py  test_extension_endpoint.py  test_swagger.py
apis/: auth.py  email.py  main.py  ocr.py  report.py  socialmedia.py  website.py
cdk-infra/: cdk.json  package-lock.json  package.json
cdk-infra/lib/: cdk-infra-stack.ts
core/: event_handlers.py  exception_handlers.py
env/: dev.yaml  prd.yaml  uat.yaml
middleware/: auth_middleware.py
models/: clients.py  customResponse.py
prompts/: emailPrompts.py  socialmediaPrompts.py  websitePrompts.py
test/: emailTest.json  socialmediaTest.json  websiteTest.json
utils/: authUtils.py  checkerUtils.py  constant.py  dbUtils.py  dynamodbUtils.py  emailUtils.py  llmUtils.py  reportUtils.py  s3Utils.py  socialmediaUtils.py  websiteUtils.py
