[project]
name = "mai-scam-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "mistralai>=1.9.3",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "pymongo>=4.14.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]
